--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/5.online-statistics-collection.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/5.online-statistics-collection.md
@@ -1,6 +1,6 @@
 # 在线统计信息收集
 
-在线统计信息收集指在执行 `INSERT` 插入的时候就收集统计信息，不用手动调用系统包。在批量导入数据的过程中，可以实时收集统计信息，不需要额外的发起收集任务，减少了运维操作，提高统计信息收集性能。
+在线统计信息收集指在执行 `INSERT` 插入时，数据库优化器就可以收集统计信息，不用手动调用系统包。在批量导入数据的过程中，可以实时收集统计信息，不需要额外的发起收集任务，减少了运维操作，提高统计信息收集性能。
 
 OceanBase 数据库使用 `GATHER_OPTIMIZER_STATISTICS`/`NO_GATHER_OPTIMIZER_STATISTICS` Hint 和系统变量 `_optimizer_gather_stats_on_load`（默认开启）进行在线统计信息收集，同时也可以使用旁路导入功能的 `APPEND` Hint 实现在线统计信息收集。
 
@@ -13,7 +13,7 @@ OceanBase 数据库使用 `GATHER_OPTIMIZER_STATISTICS`/`NO_GATHER_OPTIMIZER_STA
 
 - `CREATE TABLE...AS SELECT`（即 CTAS）
 
-  在系统变量 `_optimizer_gather_stats_on_load` 开启的情况下，CTAS 默认启动在线收集统计信息功能。如果需要禁用该功能，可以使用 `NO_GATHER_OPTIMIZER_STATISTICS` Hint，示例如下：
+  在系统变量 `_optimizer_gather_stats_on_load` 为 True 时，CTAS 默认启动在线收集统计信息功能。如果需要禁用该功能，可以使用 `NO_GATHER_OPTIMIZER_STATISTICS` Hint，示例如下：
 
   ```sql
   CREATE TABLE table_name AS SELECT /*+NO_GATHER_OPTIMIZER_STATISTICS*/* FROM...
@@ -21,7 +21,7 @@ OceanBase 数据库使用 `GATHER_OPTIMIZER_STATISTICS`/`NO_GATHER_OPTIMIZER_STA
 
 - `INSERT INTO`
 
-  在系统变量 `_optimizer_gather_stats_on_load` 开启的情况下，使用`GATHER_OPTIMIZER_STATISTICS` Hint 或者 `APPEND` Hint 启动在线收集统计信息功能。
+  在系统变量 `_optimizer_gather_stats_on_load` 为 True 时，使用 `GATHER_OPTIMIZER_STATISTICS` Hint 或者 `APPEND` Hint 启动在线收集统计信息功能。
   示例如下：
 
   ```sql
