--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/10.json-formatted-data-type-oracle-mode/2.create-json-data-type-columns-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/10.json-formatted-data-type-oracle-mode/2.create-json-data-type-columns-of-oracle-mode.md
@@ -3,7 +3,7 @@
 JSON 数据可以存储在数据库中、建立索引和查询，OceanBase 数据库支持名称为 JSON 的数据类型用户保存 JSON 文本，以及带有 `IS JSON` 约束的文本类型保存 JSON 文本。
 OceanBase 数据库支持用户创建一个包含 JSON 列的表，且每个表可以创建多个类型为 JSON 的列。但是存在如下限制：
 
-- JSON 类型的列不能作为 Primary Key、Forgin Key 和 Unique Key，但可以指定 JSON 数据的特殊路径作为索引。
+- JSON 类型的列不能作为 Primary Key、Forgin Key 和 Unique Key，但可以指定 JSON 数据的路径作为索引。
 - JSON 类型的列不能作为分区键。
 
 如下示例展示如何创建 JSON 数据类型的列。
