--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/19.restore.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/19.restore.md
@@ -67,7 +67,7 @@ restore_action:
 * 从 NFS 数据备份路径与 NFS 日志归档路径恢复租户 `mysql` 到指定 SCN, 指定资源池为 `restore_pool`。
   
    ```sql
-   obclient> ALTER SYSTEM RESTORE mysql FROM 'file:///data/nfs/backup/data,file:///data/nfs/backup/ archive' UNTIL SCN='xxxxxxxx' WITH 'pool_list=restore_pool';
+   obclient> ALTER SYSTEM RESTORE mysql FROM 'file:///data/nfs/backup/data,file:///data/nfs/backup/archive' UNTIL SCN='xxxxxxxx' WITH 'pool_list=restore_pool';
    ```
 
 * 从 OSS 备份路径与 OSS 日志归档路径恢复租户 `mysql` 到指定时间戳 `2022-06-1 00:00:00`, 指定资源池为 `restore_pool`。
