--- a/zh-CN/9.release-notes/102.community-edition-history-release/99.V4.1/98.V4.1.0.md
+++ b/zh-CN/9.release-notes/102.community-edition-history-release/99.V4.1/98.V4.1.0.md
@@ -552,7 +552,7 @@ Benchmark SQL V5.0
 |`ob_enable_trace_log`	|是否启用 SQL Trace 功能。|	废弃|	4.1|
 |`ob_enable_show_trace`	|是否启用 Show Trace 功能。|	默认值 0，关闭 Show Trace 功能。|	4.1|
 |`_data_storage_io_timeout`	|配置数据盘最大 IO 超时时间。|	默认值 120s 调整为 10s，取值下线 5s 调整为 1s。|	4.1|
-|`_enable_pkt_nio`	|控制新的 RPC 网络框架 pkt-nio 的启用和关闭。|	默认值 True。|4.1|
+|`_enable_pkt_nio`	|控制新的 RPC 网络框架 pkt-nio 的启用和关闭。|	默认值 False。|4.1|
 |`rpc_memory_limit_percentage`	|租户下的 RPC 可以使用的最大内存。|	默认值 0，表示不对 RPC 内存进行限制。|	4.1|
 |`_private_buffer_size`	|配置日志数据达到 buffer size 时触发写日志。|  	默认值 256KB 调整为 16KB。|	4.1|
 |`_mvcc_gc_using_min_txn_snapshot`|	是否用户使用活跃事务快照来保留多版本数据。|	默认值 True。|	4.1|
