--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/103.V2.2/1.ob-2277.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/103.V2.2/1.ob-2277.md
@@ -647,3 +647,34 @@ MySQL 模式下，禁止多表更新使用 order by 或 limit 算子， 与 MySQ
 * 主备库升级目前仅支持最大性能模式下升级，如果升级之前是最大保护模式或者最大可用模式，需要先降级为最大性能模式再执行集群升级。
 * PL debug 功能仅限 x86 平台使用，ARM 平台上不推荐使用。
 * 启用备份恢复操作支持动态设置 AK/SK 功能后， 暂不支持升级到 3.x 系列版本。
+
+## V2.2.77 BP16
+
+### 版本信息
+
+* 发布时间：2023 年 2 月 14 日
+* 版本号：V2.2.77 BP16
+
+### 功能增强
+
+  新增支持 OBKV 热点行更新的 GROUP COMMIT 能力。在热点行高并发更新场景下，服务端对热点行的更新做聚合，避免每一个操作都去申请行锁、释放行锁，优化行锁竞争等待时间，提升热点行更新速度。
+
+### 缺陷修复
+
+* 修复使用 `use database` 命令，触发事务隐式提交的问题。
+* 修复 PL 中 SELECT 语句无法读取未提交数据的问题。
+* 修复物理恢复成功后，部分索引状态异常的问题。
+* 修复创建视图在已经指定视图列名的情况下，还必须对 SELECT 子句中的 Rowid 指定别名的问题。
+* 修复 HbaseAPI 的 BATCH GET 请求耗时高的问题。
+* 修复 TableAPI 更新主键列导致主表和索引表数据不一致的问题。
+* 修复 TableAPI 自动更新填充默认值为 `CURRENT_TIMESTAMP` 或 `CURRENT_TIMESTAMP ON` `UPDATE CURRENT_TIMESTAMP` 的字段报错的问题。
+* 修复 `REGEXP_REPLACE` 函数因程序检查过于严格，导致计算结果预估长度大于允许最大长度而报错的问题。
+* 修复 MySQL 模式下，函数 `FIND_IN_SET(binary 'b','a,B,c,d')` 的二进制比较的方式不生效的问题。
+* 修复 MySQL 模式下，`FIND_IN_SET` 函数执行慢的问题。
+* 修复自动清理任务正常调度时，预期被清理的 `backup_piece` 未删除的问题。
+
+### 升级与约束
+
+* 目前主备库升级仅支持最大性能模式下升级，如果升级之前是最大保护模式或是最大可用模式，则需要先降级为最大性能模式再执行集群升级。
+* 启用备份恢复操作支持动态设置 AK/SK 功能后， 暂不支持升级到 V3.x 系列版本。
+* PL debug 功能仅限 x86 平台使用，ARM 平台上不推荐使用。
