--- a/zh-CN/7.reference/3.performance-tuning-guide/2.performance-related-tools/2.internal-table/3.gv-ob_transaction_participants.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/2.performance-related-tools/2.internal-table/3.gv-ob_transaction_participants.md
@@ -14,7 +14,7 @@
 | SESSION_ID             | bigint(20)    | NO         | 会话 ID           |
 | SCHEDULER_ADDR    | varchar(64)   | NO   |  事务 Session 所在机器 IP   |
 | TX_TYPE              | varchar(11)    | NO         | 事务类型            |
-| TX_ID                | bigint(20))  | NO         | 事务 ID           |
+| TX_ID                | bigint(20) | NO         | 事务 ID           |
 | LS_ID             | bigint(20)    | NO   |  事务记录涉及的分区信息   | 
 | PARTICIPANTS      | varchar(1024) | NO   | 事务涉及的所有分区    | 
 | CTX_CREATE_TIME   | timestamp(6)  | YES  | ctx 创建时间     | 
@@ -24,8 +24,6 @@
 | PENDING_LOG_SIZE    | bigint(20)   | NO   |  本事务该参与者尚未刷盘的日志大小   | 
 | FLUSHED_LOG_SIZE    | bigint(20)    | NO   | 本事务该参与者已经刷盘的日志大小    | 
 | ROLE              | varchar(8)    | NO   |  该副本的角色，取值 0 和 1 分别表示 Leader 和 Follower。   |
-
-
 
 ## 常用 SQL
 
