--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/5.modify-dump-configuration.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/5.modify-dump-configuration.md
@@ -10,7 +10,7 @@
 |-----------------------------|-------------------------------------------------------|-----|--------------|
 | minor_compact_trigger       | 租户级配置项，触发转储的 SSTable 的个数阈值。                                  | 2   | \[0, 16\]    |
 | major_compact_trigger          | 租户级配置项，转储多少次后触发合并。                                           | 0   | \[0, 65535\] |
-| freeze_trigger_percentage   | 集群级配置项，租户 MemStore 占用内存的比例阈值，达到该值则触发 Freeze。                | 20  | \[1, 99\]    |
+| freeze_trigger_percentage   | 租户级配置项，租户 MemStore 占用内存的比例阈值，达到该值则触发 Freeze。                | 20  | \[1, 99\]    |
 | memstore_limit_percentage   | 集群级配置项，租户 MemStore 占租户总内存的百分比。                               | 50  | \[1, 99\]    |
 
   <main id="notice" type='explain'>
