修改 19.load-data-of-oracle-mode.md

--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/19.load-data-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/19.load-data-of-oracle-mode.md
@@ -49,15 +49,15 @@ LOAD DATA
 |                参数               |        描述                     |
 |----------------------------------|---------------------------------|
 | parallel(N)                      | 加载数据的并行度，`N` 默认为 `4`。    |
-| load_batch_size(M)               | 指定每次插入的批量大小，`M` 默认为 `1000`。推荐取值范围为 \[100,1000\]。  |
+| load_batch_size(M)               | 指定每次插入的批量大小，`M` 默认为 `100`。推荐取值范围为 \[100,1000\]。  |
 | APPEND | 使用 Hint 启用旁路导入功能，即支持直接在数据文件中分配空间并写入数据。`APPEND` Hint 默认等同于使用的 `direct(false, 0)`，同时可以实现 在线收集统计信息（`GATHER_OPTIMIZER_STATISTICS` Hint）的功能。   |
-| direct | 使用 Hint 启用旁路导入。`direct(bool, int)` 中的 `bool`参数表示给定的CSV 文件是否有序，`true` 表示有序，此时内部就不需要排序了，否则内部就需要排序；`int` 表示最大容忍的错误行数。 |
+| direct | 使用 Hint 启用旁路导入。`direct(bool, int)` 中的 `bool`参数表示给定的 CSV 文件是否需要排序，`true` 表示需要排序；`int` 表示最大容忍的错误行数。 |
 | file_name                        | 定输入文件的路径和文件名，目前仅支持从 OBServer 节点本地加载文件。 |
 | table_name                       | 导入数据的表的名称，支持分区表与非分区表。  |
 | FIELDS \| COLUMNS                | 指定字段的格式。 <ul><li> `ENCLOSED BY`：设置导出值的修饰符。  </li> <li> `TERMINATED BY`：设置导出列的结束符。 </li> <li>`ESCAPED BY`：设置导出值忽略的字符。</li></ul>   |
 | LINES STARTING BY                | 指定行起始符。   |
 | LINES TERMINATED BY              | 指定行结束符。 |
-| IGNORES number { LINES \| ROWS } | 忽略前几行，`LINES` 表示文件的前几行，`ROWS` 表示由字段分隔符指定的前几行数据。 缺省时，会将输入文件中的字段逐个与表中的列进行对应。 如果输入文件中并没有包含所有的列，那么缺少的列按照以下的规则会被默认填充： <ul><li> 字符类型：空字符串。   </li><li> 数值类型：0。    </li> <li> 日期类型：`0000-00-00`。</li></ul>    |
+| IGNORES number { LINES \| ROWS } | 忽略前几行，`LINES` 表示文件的前几行，`ROWS` 表示由字段分隔符指定的前几行数据。 缺省时，会将输入文件中的字段逐个与表中的列进行对应。 如果输入文件中并没有包含所有的列，那么缺少的列按照以下的规则会被默认填充： <ul><li> 字符类型：空字符串。   </li> <li> 数值类型：0。    </li> <li> 日期类型：`0000-00-00`。</li></ul>    |
 | column_name_var                  | 指定导入的列名。   |
 
 ## 示例
