410 Fix the  problem

--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/9.views-of-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/9.views-of-log-archive.md
@@ -42,7 +42,7 @@ OceanBase 数据库支持通过各种视图查看归档的相关信息。
 | COMPATIBLE                   | 归档的兼容版本号                                    |
 | BASE_PIECE_ ID               | 该轮归档的首个 piece_id                             |
 | USED_PIECE_ID                | 该轮归档已使用的 piece_id                           |
-| PIECE_SWITCH_INTERVAL        | Piece 切换的时间间隔（周日 -> 周期）                                      |
+| PIECE_SWITCH_INTERVAL        | Piece 切换周期                                    |
 | UNIT_SIZE                    | 日志归档数据单次压缩或加密的日志块大小，当前该字段暂未使用              |
 | COMPRESSION                  | 压缩算法，当前该字段暂未使用                                             |
 | INPUT_BYTES                  | 归档的原始日志数据量                                |
@@ -75,7 +75,7 @@ OceanBase 数据库支持通过各种视图查看归档的相关信息。
 | COMPATIBLE                   | 归档的兼容版本号                                   |
 | BASE_PIECE_ID                | 该轮归档的首个 piece_id                            |
 | USED_PIECE_ID                | 该轮归档已使用的 piece_id                          |
-| PIECE_SWITCH_INTERVAL        | Piece 切换的时间间隔（周日 -> 周期）                                      |
+| PIECE_SWITCH_INTERVAL        | Piece 切换周期                                      |
 | UNIT_SIZE                    | 日志归档数据单次压缩或加密的日志块大小，当前该字段暂未使用                  |
 | COMPRESSION                  | 压缩算法，当前该字段暂未使用                                              |
 | INPUT_BYTES                  | 归档的原始日志数据量                               |
