--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/133.oceanbase-cdb_ob_archivelog-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/133.oceanbase-cdb_ob_archivelog-of-mysql-mode.md
@@ -21,9 +21,9 @@
 | COMPATIBLE | bigint(20) | NO | 兼容性版本 |
 | BASE_PIECE_ID | bigint(20) | NO | 该轮 Round 的首个 PIECE ID |
 | USED_PIECE_ID | bigint(20) | NO | 该轮 Round 已使用的 PIECE ID |
-| PIECE_SWITCH_INTERVAL | bigint(20) | NO | Piece 切换的时间间隔（周日 -> 周期） |
+| PIECE_SWITCH_INTERVAL | bigint(20) | NO | Piece 切换周期 |
 | UNIT_SIZE   | bigint(20)   | NO   | 日志归档数据单次压缩或加密的日志块大小，当前暂不支持该字段    |
-| COMPRESSION | varchar(128) | NO   | 压缩算法：<ul><li> none: 表示不压缩 </li><li> lz4_1.0：表示使用压缩算法 lz4_1.0 </li><li>zstd_1.3.8：表示使用压缩算法 zstd_1.3.8</li></ul></br>当前暂不支持该字段    |
+| COMPRESSION | varchar(128) | NO   | 压缩算法：<ul><li> none: 表示不压缩 </li><li> lz4_1.0：表示使用压缩算法 lz4_1.0 </li><li>zstd_1.3.8：表示使用压缩算法 zstd_1.3.8</li></ul>当前暂不支持该字段    |
 | INPUT_BYTES | bigint(21) | NO | 读取的数据量<br>OceanBase 数据库暂不支持该字段 |
 | INPUT_BYTES_DISPLAY | varchar(28) | NO | 对 INPUT_BYTES 单位转换之后的展示，单位为 MB 、GB、TB 和 PB 中的一种<br>OceanBase 数据库暂不支持该字段 |
 | OUTPUT_BYTES | bigint(21) | NO | 输出的数据量<br>OceanBase 数据库暂不支持该字段 |
