--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/86.oceanbase-cdb_ob_archivelog_piece_files-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/86.oceanbase-cdb_ob_archivelog_piece_files-of-mysql-mode.md
@@ -25,7 +25,7 @@
 | END_SCN | bigint(20) unsigned | NO | Piece 理论上的结束位点 |
 | COMPATIBLE | bigint(20) | NO | 日志归档的兼容版本号 |
 | UNIT_SIZE   | bigint(20)   | NO   | 日志归档数据单次压缩或加密的日志块大小，当前暂不支持该字段    |
-| COMPRESSION | varchar(128) | NO   | 压缩算法：<ul><li> none: 表示不压缩 </li><li> lz4_1.0：表示使用压缩算法 lz4_1.0 </li><li>zstd_1.3.8：表示使用压缩算法 zstd_1.3.8</li></ul></br>当前暂不支持该字段    |
+| COMPRESSION | varchar(128) | NO   | 压缩算法：<ul><li> none: 表示不压缩 </li><li> lz4_1.0：表示使用压缩算法 lz4_1.0 </li><li>zstd_1.3.8：表示使用压缩算法 zstd_1.3.8</li></ul>当前暂不支持该字段    |
 | INPUT_BYTES | bigint(20) | NO | 原始数据量 |
 | INPUT_BYTES_DISPLAY | varchar(27) | NO | 将 INPUT_BYTES 转换单位之后的展示 |
 | OUTPUT_BYTES | bigint(20) | NO | 加密、压缩之后的有效数据量 |
