--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/211.dba_ob_archivelog-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/211.dba_ob_archivelog-of-oracle-mode.md
@@ -17,9 +17,9 @@
 | COMPATIBLE | NUMBER(38) | NO | 兼容性版本 |
 | BASE_PIECE_ID | NUMBER(38) | NO | 该轮 Round 的首个 PIECE ID |
 | USED_PIECE_ID | NUMBER(38) | NO | 该轮 Round 已使用的 PIECE ID |
-| PIECE_SWITCH_INTERVAL | NUMBER(38) | NO | Piece 切换周日 |
+| PIECE_SWITCH_INTERVAL | NUMBER(38) | NO | Piece 切换周期 |
 | UNIT_SIZE   | NUMBER(38)     | NO   | 日志归档数据单次压缩或加密的日志块大小，当前暂不支持该字段 |
-| COMPRESSION | VARCHAR2(128)  | NO   |  压缩算法：<ul><li> none: 表示不压缩 </li><li> lz4_1.0：表示使用压缩算法 lz4_1.0 </li><li>zstd_1.3.8：表示使用压缩算法 zstd_1.3.8</li></ul></br>当前暂不支持该字段    ||
+| COMPRESSION | VARCHAR2(128)  | NO   |  压缩算法：<ul><li> none: 表示不压缩 </li><li> lz4_1.0：表示使用压缩算法 lz4_1.0 </li><li>zstd_1.3.8：表示使用压缩算法 zstd_1.3.8</li></ul>当前暂不支持该字段    |
 | INPUT_BYTES | NUMBER | NO | 读取的数据量 OceanBase 数据库暂不支持该字段 |
 | INPUT_BYTES_DISPLAY | VARCHAR2(42) | NO | 对 INPUT_BYTES 单位转换之后的展示，单位为 MB 、GB、TB 和 PB 中的一种
 OceanBase 数据库暂不支持该字段 |
