--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/3.data-partitions-and-replicas/1.data-partitioning-and-partitioned-replica-overview.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/3.data-partitions-and-replicas/1.data-partitioning-and-partitioned-replica-overview.md
@@ -28,7 +28,10 @@ OceanBase 数据库支持以下三种类型的副本：
 
 * 全能型副本（FULL/F）
   
-  V4.0.0 版本仅支持该副本类型。
+  <main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>V4.0.0 版本仅支持该副本类型。</p>
+  </main>
 
 * 日志型副本（LOGONLY/L）
 
