--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/178.dbms-udr-oracle/1.dbms-udr-overview-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/178.dbms-udr-oracle/1.dbms-udr-overview-oracle.md
@@ -23,7 +23,7 @@ ALTER SYSTEM SET enable_user_defined_rewrite_rules = 'False';
 - 常量参数标记不能用于 SQL 关键字、标识符、函数等。
 - 对除了用“?”或者“:{name}”标记的参数之外的常量值，进行等值匹配。
 - 同时存在多个可匹配规则时，随机匹配第一个匹配上的规则。
-- 对创建规则时指定的 `db_name`（Oracle 模式下为当前 User）进行严格匹配。
+- 对创建规则时指定的 User 进行严格匹配。
 
 
 如下示例中，在改写规则模板中使用“:{name}”充当匹配常量参数的标记。
