--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/53.dbms-debug-oracle/12.get-runtime-info-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/53.dbms-debug-oracle/12.get-runtime-info-oracle.md
@@ -3,7 +3,7 @@ GET_RUNTIME_INFO
 
 `GET_RUNTIME_INFO` 函数用于返回当前程序的有关信息。
 
-仅当 `CONTINUE` 参数设置为 0 时才需要使用此函数。
+仅当 `CONTINUE` 函数的 `info_requested` 参数设置为 0 时才需要使用此函数。
 
 
   <main id="notice" type='explain'>
