--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/53.dbms-debug-oracle/18.set-timeout-behaviour-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/53.dbms-debug-oracle/18.set-timeout-behaviour-oracle.md
@@ -30,7 +30,7 @@ behaviour IN PLS_INTEGER);
 |---------------------|-------------------------------------------------------------------|
 | retry_on_timeout    | 重试。超时无效。这类似于将超时设置为无限大的值。                                          |
 | continue_on_timeout | 继续执行，使用相同的事件标识。                                                   |
-| nodebug_on_timeout  | 关闭调试模式（即调用 `debug_off` ）并继续执行。此目标会话将不再生成事件，除非通过调用 debug_on 重新进行初始化。 |
+| nodebug_on_timeout  | 关闭调试模式（即调用 `debug_off` ）并继续执行。此目标会话将不再生成事件，除非通过调用 `debug_on` 重新进行初始化。 |
 | abort_on_timeout    | 继续执行，使用 `abort_execution` 标识，这将导致程序立即终止。会话仍处于调试模式。                |
 
 
