--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/53.dbms-debug-oracle/8.disable-breakpoint-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/53.dbms-debug-oracle/8.disable-breakpoint-oracle.md
@@ -26,7 +26,7 @@ DBMS_DEBUG.DISABLE_BREAKPOINT (
 
 |   **参数**   |           **解释**           |
 |------------|----------------------------|
-| breakpoint | 通过 SET_BREAKPOINT 获得的断点编号。 |
+| breakpoint | 通过 `SET_BREAKPOINT` 获得的断点编号。 |
 
 
 
