--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/8.set-consumer-group-mappingn-directive-mysql.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/8.set-consumer-group-mappingn-directive-mysql.md
@@ -15,7 +15,7 @@ DBMS_RESOURCE_MANAGER.SET_CONSUMER_GROUP_MAPPING(
 
 |       参数      |      说明          |
 |----------------|---------------------|
-| attribute      | 要添加或修改的映射属性。当前版本仅支持 `ORACLE_USER`（即数据库的用户名）、`COLUMN` 属性值和 `ORACLE_FUNCTION`。由于 OceanBase 数据库后台执行的诸如合并转储、备份恢复和数据补全等任务，由于其宏观上不属于 User 范畴而且在执行任务的时候很可能挤占其他用户和任务的 CPU、IO 资源。因此，针对 OceanBase 数据库不同后台任务可以指定 `FUNCTION` 映射关系，后台任务的资源可以被限制在其对应的资源组内。  |
+| attribute      | 要添加或修改的映射属性。当前版本仅支持 `USER`（即数据库的用户名）、`COLUMN` 属性值和 `FUNCTION`。由于 OceanBase 数据库后台执行的诸如合并转储、备份恢复和数据补全等任务，由于其宏观上不属于 User 范畴而且在执行任务的时候很可能挤占其他用户和任务的 CPU、IO 资源。因此，针对 OceanBase 数据库不同后台任务可以指定 `FUNCTION` 映射关系，后台任务的资源可以被限制在其对应的资源组内。  |
 | value          | 要匹配的属性值，包括绝对映射和正则表达式。  |
 | consumer_group | 映射的使用组的名称，如果为 `NULL` 则删除映射。  |
 
@@ -25,18 +25,18 @@ DBMS_RESOURCE_MANAGER.SET_CONSUMER_GROUP_MAPPING(
 如果指定属性和值不存在映射，则将创建指定使用组的映射。如果指定属性和值的映射已经存在，则映射的使用组将更新为指定的使用组。如果 `consumer_group` 参数为 `NULL`，则来自指定属性和值的任何映射都将被删除。
 
 
-下表为 OceanBase 数据库中预定义的 `ORACLE_FUNCTION` 资源组映射规则，您可以使用 `DBMS_RESOURCE_MANAGER.SET_CONSUMER_GROUP_MAPPING` 过程来修改或删除这些映射规则。
+下表为 OceanBase 数据库中预定义的 `FUNCTION` 资源组映射规则，您可以使用 `DBMS_RESOURCE_MANAGER.SET_CONSUMER_GROUP_MAPPING` 过程来修改或删除这些映射规则。
 
 | 属性名称 | 取值 | 说明 |
 | --- | --- | --- |
-| ORACLE_FUNCTION |  COMPACTION_HIGH   | 对应 Mini Merge 和 DDL KV Merge 任务。  |
-| ORACLE_FUNCTION |  COMPACTION_MID   | 对应 Minor Merge  任务。 |
-| ORACLE_FUNCTION |  COMPACTION_LOW   | 对应 Major Merge 任务。  |
-| ORACLE_FUNCTION |  HA_HIGH   | 对应复制、Rebuild、恢复任务。   |
-| ORACLE_FUNCTION |  HA_MID   | 对应迁移任务。 |
-| ORACLE_FUNCTION |  HA_LOW   | 对应备份、备份清理等任务。   |
-| ORACLE_FUNCTION |  DDL   | 对应唯一索引校验，删列补数据操作。   |
-| ORACLE_FUNCTION |  DDL_HIGH   | 对应 DDL MemTable 的转储操作。  |
+| FUNCTION |  COMPACTION_HIGH   | 对应 Mini Merge 和 DDL KV Merge 任务。  |
+| FUNCTION |  COMPACTION_MID   | 对应 Minor Merge  任务。 |
+| FUNCTION |  COMPACTION_LOW   | 对应 Major Merge 任务。  |
+| FUNCTION |  HA_HIGH   | 对应复制、Rebuild、恢复任务。   |
+| FUNCTION |  HA_MID   | 对应迁移任务。 |
+| FUNCTION |  HA_LOW   | 对应备份、备份清理等任务。   |
+| FUNCTION |  DDL   | 对应唯一索引校验，删列和补数据操作。   |
+| FUNCTION |  DDL_HIGH   | 对应 DDL MemTable 的转储操作。  |
 
 
 
