--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/53.dbms-debug-oracle/1.dbms-debug-overview-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/53.dbms-debug-oracle/1.dbms-debug-overview-oracle.md
@@ -37,14 +37,14 @@ ALTER [PACKAGE | TYPE] <name> COMPILE DEBUG BODY;
 | break_next_line  | 在下一个源行中断（跨过调用）。                                                                       |
 | break_any_call   | 在下一个源行中断（分步调用）。                                                                       |
 | break_any_return | 从当前入口点返回后中断（跳过从当前例程调用的任何入口点）。                                                         |
-| break_return     | 下一次入口点准备返回时中断，包括从当前入口调用的入口点。如果解释器正在运行调用 Proc2 的 Proc1，那么 break_return 将在 Proc2 的末尾停止。 |
-| abort_execution  | 一旦 DBMS_DEBUG.CONTINUE 被调用则停止执行并强制"退出"事件 。                                            |
+| break_return     | 下一次入口点准备返回时中断，包括从当前入口调用的入口点。如果解释器正在运行调用 `Proc2` 的 `Proc1`，那么 `break_return` 将在 `Proc2` 的末尾停止。 |
+| abort_execution  | 一旦 `DBMS_DEBUG.CONTINUE` 被调用则停止执行并强制“退出”事件 。                                            |
 
 
 
 **Information Flags** 
 
-以下标识可以作为 `info requested` 参数传递给 `YNCHRONIZE`、`CONTINUE` 和 `GET_RUNTIME_INFO`。
+以下标识可以作为 `info requested` 参数传递给 `SYNCHRONIZE`、`CONTINUE` 和 `GET_RUNTIME_INFO`。
 
 
 |       **标识**       |   **描述**   |
