Error code modification

--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/2.ora-00000-to-ora-00999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/2.ora-00000-to-ora-00999-of-oracle-mode.md
@@ -686,7 +686,9 @@ long
 
 * SQLSTATE：42000
 
+* 错误原因：指定的标识符超过限制要求。
 
+* 解决方法：请将指定标识符的字节数设置在限制范围内。
 
 ORA-00976：Specified pseudo column or operator not allowed here
 -----------------------------------------------------------------------------------
