--- a/zh-CN/18.supporting-tools/8.hbaseapi/5.traffic-limit-intro.md
+++ b/zh-CN/18.supporting-tools/8.hbaseapi/5.traffic-limit-intro.md
@@ -1,6 +1,6 @@
 # 限流功能介绍
 
-目前限流功能支持以下功能：
+目前限流支持以下功能：
 
 - 支持 TableAPI 和 HBaseAPI。
     对单个操作进行限流和统计。
@@ -8,7 +8,8 @@
     查询仅限流与统计 `startkey == endkey` 的场景。异步查询当前不包括在热键统计中。
 
 在每个时长为 2s 的 epoch 中，每个租户将计算其前 10 个访问频率最高的热键。当过去几个 epoch 中的热键操作次数（统计当前与历史 3 个 epoch 中单个热键访问频率的平均值）超过租户级别配置项 `kv_hotkey_throttle_threshold` 时，该热键将被添加到受限的热键列表中。
-受限的热键列表中的热键每个 epoch 根据热键的统计结果进行变化，当访问频率的均值大于 `kv_hotkey_throttle_threshold` 时，热键列表中热键的限流比例增加10%。当流量均值为 `kv_hotkey_throttle_threshold` 的 70% ~ 100% 内时，限流比例不变。其余情况下热键列表中的热键限流比例减少 10%。
+受限的热键列表中的热键每个 epoch 根据热键的统计结果进行变化，当访问频率的均值大于 `kv_hotkey_throttle_threshold` 时，热键列表中热键的限流比例增加 10%。限流比例最大值为 100%，限流比例的大小表示有多少请求会被 observer 直接拒绝执行，同时返回 `OB_KILLED_BY_THROTTLING` 错误码。当流量均值为 `kv_hotkey_throttle_threshold` 的 70% ~ 100% 内时，限流比例不变。其余情况下热键列表中的热键限流比例减少 10%。
+
 
 ## TableAPI 类型
 
@@ -50,7 +51,7 @@ HBaseAPI 热键限流的配置项见下表：
 
 ## 限流功能视图及配置项
 
-视图 `V$0B KV_HOTKEY_STAT` 提供给系统租户查看所有租户当前 server 上一个 epoch 的热键及当前限流热键的情况（两者后续统一称作 topK 热键信息），非系统租户使用该视图只能查到当前租户当前 server 的 topK 热键信息。`GV$0B_KV_HOTKEY_STAT` 视图提供给系统租户查看所有租户所有 server 的 topK 热键信息，非系统租户使用该视图只能查到本租户所有 server 的 topK 热键信息。
+视图 `V$0B KV_HOTKEY_STAT` 提供给系统租户查看所有租户当前 server 上一个 epoch 的热键及当前限流热键的情况（两者后续统一称作 top10 热键信息），非系统租户使用该视图只能查到当前租户当前 server 的 top10 热键信息。`GV$0B_KV_HOTKEY_STAT` 视图提供给系统租户查看所有租户所有 server 的 top10 热键信息，非系统租户使用该视图只能查到本租户所有 server 的 top10 热键信息。
 
 配置项名称 |生效级别 | 生效模式 | 数据类型 | 取值范围 | 默认值 | 说明
 -------- | ------- | ------- | ------ | ------- | ----- | ---
