修改 5.traffic-limit-intro.md

--- a/zh-CN/18.supporting-tools/8.hbaseapi/5.traffic-limit-intro.md
+++ b/zh-CN/18.supporting-tools/8.hbaseapi/5.traffic-limit-intro.md
@@ -51,7 +51,7 @@ HBaseAPI 热键限流的配置项见下表：
 
 ## 限流功能视图及配置项
 
-视图 `V$0B KV_HOTKEY_STAT` 提供给系统租户查看所有租户当前 server 上一个 epoch 的热键及当前限流热键的情况（两者后续统一称作 top10 热键信息），非系统租户使用该视图只能查到当前租户当前 server 的 top10 热键信息。`GV$0B_KV_HOTKEY_STAT` 视图提供给系统租户查看所有租户所有 server 的 top10 热键信息，非系统租户使用该视图只能查到本租户所有 server 的 top10 热键信息。
+视图 `V$0B_KV_HOTKEY_STAT` 提供给系统租户查看所有租户当前 server 上一个 epoch 的热键及当前限流热键的情况（两者后续统一称作 top10 热键信息），非系统租户使用该视图只能查到当前租户当前 server 的 top10 热键信息。`GV$0B_KV_HOTKEY_STAT` 视图提供给系统租户查看所有租户所有 server 的 top10 热键信息，非系统租户使用该视图只能查到本租户所有 server 的 top10 热键信息。
 
 配置项名称 |生效级别 | 生效模式 | 数据类型 | 取值范围 | 默认值 | 说明
 -------- | ------- | ------- | ------ | ------- | ----- | ---
