--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/1.dump-management-overview.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/1.dump-management-overview.md
@@ -6,25 +6,31 @@ OceanBase 数据库的存储引擎采用 LSM-Tree 架构，数据大体上被分
 
 ## 分层转储
 
-对于 OceanBase 数据库 V2.1.x 及之前的版本，在同一时刻仅会维护一个转储 SSTable，当 MemTable 需要进行转储时，会将 MemTable 中的数据和转储 SSTable 中的数据进行归并，这会带来一个问题，随着转储次数不断增多，转储 SSTable 的大小也越来越大，而一次转储需要操作的数据量也越来越多，导致转储速度越来越慢，进而导致 MemTable 内存爆满。从 V2.2.x 版本开始，OceanBase 数据库引入了分层转储策略。
+## 分层转储
+
+不使用分层转储时，OceanBase 数据库在同一时刻只会维护一个转储 SSTable，当 MemTable 需要进行转储时，会将 MemTable 中的数据与转储 SSTable 中的数据进行归并。随着转储次数不断增多，转储 SSTable 的大小也越来越大，而一次转储需要操作的数据量也越来越多，导致转储速度越来越慢，进而可能导致 MemTable 内存不足。
+
+因此 OceanBase 数据库引入了分层转储的结构，在原有的基础上增加了 L0 层。
+
+* L0 层（Mini SSTable）
+
+  被冻结的 MemTable 会直接 Flush 为 Mini SSTable。OceanBase 数据库内部可以同时存在多个 Mini SSTable。
+  
+  L0 层内部支持下压，但必须选择 Version 值域连续的 SSTable。
+
+* L1 层（Minor SSTable）
+
+  大多数情况下仅有一个 Minor SSTable。
+
+  每次下压都会在 L1 层生成新的 Minor SSTable，代替原有的 Minor SSTable。
+
+* L2 层（Major SSTable）
+
+  基线数据，在合并时产生。一般情况下仅有一个。
 
 分层转储内部实现原理如下图所示。
 
 ![转储 ](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4001269361/p351720.jpg)
-
-OceanBase 数据库的转储分为以下三层：
-
-* L0 层
-
-  L0 层内部称为 Mini SSTable。根据不同参数设置的不同转储策略，L0 层的 SSTable 可能存在也可能为空。
-
-* L1 层
-
-  L1 层内部称为 Minor SSTable，L1 层的 Minor SSTable 仍然维持 Rowkey 有序，每当 L0 层的 Mini SSTable 达到合并阈值后，L1 层的 Minor SSTable 开始参与和 L0 层的合并; 为了尽可能提升 L1 合并的效率，降低整体写放大，OceanBase 数据库内部提供了写放大系数设置，当 L0 层的 Mini SSTable 总大小和 L1 层的 Minor SSTable 的大小比率达到指定阈值后，才开始调度 L1 合并，否则仍在 L0 层内部合并。
-  
-* L2 层
-
-  L2 层是基线 Major SSTable，为了保证多副本间基线数据完全一致，日常转储过程中 Major SSTable 仍保持只读，不发生实际的合并动作。
 
 ## 转储触发方式
 
