--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/113.oceanbase-cdb_tab_cols_v-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/113.oceanbase-cdb_tab_cols_v-of-mysql-mode.md
@@ -5,7 +5,7 @@ oceanbase.CDB_TAB_COLS_V$
 功能 
 -------------------
 
-展示所有租户的表、视图对象的列信息。
+展示所有租户拥有表的列信息。
 
 字段说明 
 ----------------------
@@ -15,8 +15,8 @@ oceanbase.CDB_TAB_COLS_V$
 |         字段名称         |       类型        | 是否可以为 NULL |                                                                                                                                                  描述                                                                                                                                                   |
 |----------------------|-----------------|------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | CON_ID               | bigint(20)      | NO         | 租户 ID                                                                                                                                                                                                                                                                                                 |
-| OWNER                | varchar(128)    | NO         | 表、视图或集群的所有者                                                                                                                                                                                                                                                                                           |
-| TABLE_NAME           | varchar(128)    | NO         | 表、视图或集群的名称                                                                                                                                                                                                                                                                                            |
+| OWNER                | varchar(128)    | NO         | 表的所有者                                                                                                                                                                                                                                                                                           |
+| TABLE_NAME           | varchar(128)    | NO         | 表的名称                                                                                                                                                                                                                                                                                            |
 | COLUMN_NAME          | varchar(128)    | NO         | 列名                                                                                                                                                                                                                                                                                                    |
 | DATA_TYPE            | varchar(128)    | NO         | 列的数据类型                                                                                                                                                                                                                                                                                                |
 | DATA_TYPE_MOD        | varchar(3)      | NO         | 列的数据类型修饰符                                                                                                                                                                                                                                                                                             |
