--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/1.dictionary-view-overview-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/1.dictionary-view-overview-of-oracle-mode.md
@@ -12,26 +12,26 @@
 |                                   视图名                                   |                              功能描述                               |
 |-------------------------------------------------------------------------|-----------------------------------------------------------------|
 | [ALL_ALL_TABLES](2.all_all_tables-of-oracle-mode.md)           | 展示用户可访问的对象表和关系表。                                                |
-| [ALL_COL_COMMENTS](4.all_col_comments-of-oracle-mode.md)         | 展示用户可访问的视图和表的所有列注释。                                             |
+| [ALL_COL_COMMENTS](4.all_col_comments-of-oracle-mode.md)         | 展示用户可访问表的所有列注释。                                             |
 | [ALL_TABLES](30.all_tables-of-oracle-mode.md)               | 展示用户可访问的所有表。                                                    |
-| [ALL_TAB_COLS](31.all_tab_cols-of-oracle-mode.md)             | 展示当前用户可访问的表、视图、集群的所有列。                                          |
-| [ALL_TAB_COLUMNS](32.all_tab_columns-of-oracle-mode.md)          | 展示当前用户可访问的表、视图、集群的所有列。                                          |
-| [ALL_TAB_COMMENTS](33.all_tab_comments-of-oracle-mode.md)         | 展示当前用户可访问的表、视图的注释。                                              |
-| [DBA_COL_COMMENTS](62.dba_col_comments-of-oracle-mode.md)  | 展示数据库中所有的视图和表的所有列注释。 |
-| [DBA_TAB_COMMENTS](109.dba_tab_comments-of-oracle-mode.md)  | 展示数据库中所有表、视图的注释。     |
-| [USER_COL_COMMENTS](149.user_col_comments-of-oracle-mode.md) | 展示当前用户拥有的视图和表的所有列注释。 |
-| [USER_TAB_COMMENTS](180.user_tab_comments-of-oracle-mode.md) | 展示当前用户拥有的表、视图的注释。    |
+| [ALL_TAB_COLS](31.all_tab_cols-of-oracle-mode.md)             | 展示当前用户可访问表的所有列。                                          |
+| [ALL_TAB_COLUMNS](32.all_tab_columns-of-oracle-mode.md)          | 展示当前用户可访问表的所有列。                                          |
+| [ALL_TAB_COMMENTS](33.all_tab_comments-of-oracle-mode.md)         | 展示当前用户可访问表的注释。                                              |
+| [DBA_COL_COMMENTS](62.dba_col_comments-of-oracle-mode.md)  | 展示数据库中所有表的所有列注释。 |
+| [DBA_TAB_COMMENTS](109.dba_tab_comments-of-oracle-mode.md)  | 展示数据库中所有表的注释。     |
+| [USER_COL_COMMENTS](149.user_col_comments-of-oracle-mode.md) | 展示当前用户拥有表的所有列注释。 |
+| [USER_TAB_COMMENTS](180.user_tab_comments-of-oracle-mode.md) | 展示当前用户拥有表的注释。    |
 | [DBA_OB_TABLEGROUP_TABLES](76.dba_ob_tablegroup_tables-of-oracle-mode.md) | 展示 TABLEGROUP、TABLE 关联关系。不展示不在 TABLEGROUP 中的 TABLE。             |
 | [DBA_TABLES](105.dba_tables-of-oracle-mode.md)               | 展示数据库中的所有表。                                                     |
 | [DBA_ALL_TABLES](54.dba_all_tables-of-oracle-mode.md)           | 展示数据库中的对象表和关系表，它的字段与 ALL_ALL_TABLES 相同。                         |
 | [DBA_TABLESPACES](106.dba_tablespaces-of-oracle-mode.md)          | 展示数据库中的所有表空间。                                                   |
-| [DBA_TAB_COLS](107.dba_tab_cols-of-oracle-mode.md)             | 展示数据库中的所有表、视图、集群的所有列。                                           |
-| [DBA_TAB_COLUMNS](108.dba_tab_columns-of-oracle-mode.md)          | 展示数据库中所有的表、视图、集群的所有列。                                           |
+| [DBA_TAB_COLS](107.dba_tab_cols-of-oracle-mode.md)             | 展示数据库中的所有表的所有列。                                           |
+| [DBA_TAB_COLUMNS](108.dba_tab_columns-of-oracle-mode.md)          | 展示数据库中所有表的所有列。                                           |
 | [USER_ALL_TABLES](142.user_all_tables-of-oracle-mode.md)          | 展示当前用户可访问的对象表和关系表，除了 OWNER 字段之外，其他字段和 ALL_ALL_TABLES 相同。        |
 | [USER_TABLES](176.user_tables-of-oracle-mode.md)              | 展示当前用户拥有的所有表。                                                   |
 | [USER_TABLESPACES](177.user_tablespaces-of-oracle-mode.md)         | 展示当前用户可以访问的表空间。其列与 `DBA_TABLESPACES` 中的列相同，去除了 `PLUGGED_IN` 字段。 |
-| [USER_TAB_COLS](178.user_tab_cols-of-oracle-mode.md)            | 展示当前用户拥有的表、视图、集群的所有列。                                           |
-| [USER_TAB_COLUMNS](179.user_tab_columns-of-oracle-mode.md)         | 展示当前用户拥有的表、视图、集群的所有列。                                           |
+| [USER_TAB_COLS](178.user_tab_cols-of-oracle-mode.md)            | 展示当前用户拥有表的所有列。                                           |
+| [USER_TAB_COLUMNS](179.user_tab_columns-of-oracle-mode.md)         | 展示当前用户拥有表的所有列。                                           |
 | [ALL_VIEWS](43.all_views-of-oracle-mode.md)                | 展示当前用户可访问的视图。                                                   |
 | [DBA_VIEWS](119.dba_views-of-oracle-mode.md)                | 展示数据库中的所有视图。其列与 `ALL_VIEWS` 中的列相同。                              |
 | [USER_VIEWS](186.user_views-of-oracle-mode.md)               | 展示当前用户拥有的视图。                                                    |
