--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/180.user_tab_comments-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/180.user_tab_comments-of-oracle-mode.md
@@ -4,7 +4,7 @@ USER_TAB_COMMENTS
 功能
 -----------
 
-查看当前用户拥有的表、视图的注释。
+查看当前用户拥有表的注释。
 
   <main id="notice" >
     <h4>功能适用性</h4>
@@ -23,6 +23,6 @@ USER_TAB_COMMENTS
 
 |  **字段名称**  |     **类型**     | **是否可以为 NULL** | **描述**  |
 |------------|----------------|----------------|---------|
-| TABLE_NAME | VARCHAR2(128)  | NO             | 表、视图的名字 |
+| TABLE_NAME | VARCHAR2(128)  | NO             | 表的名字 |
 | TABLE_TYPE | VARCHAR2(11)   | NO             | 对象类型    |
 | COMMENTS   | VARCHAR2(4000) | NO             | 对象注释    |
