--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/1.dictionary-view-overview-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/1.dictionary-view-overview-of-mysql-mode.md
@@ -81,8 +81,8 @@ Help 命令
 | [oceanbase.CDB_INDEXES](76.oceanbase-cdb_indexes-of-mysql-mode.md)               | 展示所有租户的 INDEXE 信息。                                            |
 | [oceanbase.CDB_TABLES](116.oceanbase-cdb_tables-of-mysql-mode.md)                | 展示所有租户的 TABLE 信息。                                             |
 | [oceanbase.CDB_OB_TABLEGROUP_TABLES](99.oceanbase-cdb_ob_tablegroup_tables-of-mysql-mode.md)  | 系统租户下展示所有租户的 TABLEGROUP、TABLE 关联关系。不展示不在 TABLEGROUP 中的 TABLE。 |
-| [oceanbase.CDB_TAB_COLS](112.oceanbase-cdb_tab_cols-of-mysql-mode.md)           | 展示所有租户的表、视图对象的列信息。                                            |
-| [oceanbase.CDB_TAB_COLS_V$](113.oceanbase-cdb_tab_cols_v-of-mysql-mode.md)           | 展示所有租户的表、视图对象的列信息。                                            |
+| [oceanbase.CDB_TAB_COLS](112.oceanbase-cdb_tab_cols-of-mysql-mode.md)           | 展示所有租户拥有表的列信息。                                            |
+| [oceanbase.CDB_TAB_COLS_V$](113.oceanbase-cdb_tab_cols_v-of-mysql-mode.md)           | 展示所有租户拥有表的列信息。                                            |
 | [oceanbase.DBA_OB_TABLEGROUP_TABLES](53.oceanbase-dba_ob_tablegroup_tables-of-mysql-mode.md)  | 展示 TABLEGROUP、TABLE 关联关系。不展示不在 TABLEGROUP 中的 TABLE。           |
 | [oceanbase.DBA_PART_KEY_COLUMNS](66.oceanbase-dba_part_key_columns-of-mysql-mode.md)      | 展示数据库中所有分区对象中分区键包含的列。                                         |
 | [oceanbase.DBA_SUBPART_KEY_COLUMNS](69.oceanbase-dba_subpart_key_columns-of-mysql-mode.md)   | 查看数据库中所有分区对象中子分区键包含的列。                                        |
