--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/1.config-cgroups-of-enterprise-of-mysql.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/1.config-cgroups-of-enterprise-of-mysql.md
@@ -17,7 +17,7 @@ OoceanBase 数据库的当前版本中，由于租户工作线程和大部分后
 
 本节以在一台 OBServer 上配置 cgroup 系统目录为例，如果有多台 OBServer ，则每台 OBServer 上都需要配置。
 
-1. 使用 `admin` 用户登录到 OBServer 服务器所在的机器。
+1. 使用 `admin` 用户登录到 OBServer 服务器。
 
 2. 执行以下命令，挂载 `/sys/fs/cgroup` 目录。
 
@@ -45,7 +45,7 @@ OoceanBase 数据库的当前版本中，由于租户工作线程和大部分后
    cgroups         395752136          0 395752136   0% /sys/fs/cgroup
    ```
 
-3. 创建 `/sys/fs/cgroup/cpu` 目录并修改 Owner，用于后续挂载 CPU 子系统。
+3. 创建 `/sys/fs/cgroup/cpu` 目录并修改 Owner，用于后续挂载 cpu 子系统。
 
    ```shell
    [admin@xxx /]$ sudo mkdir /sys/fs/cgroup/cpu
@@ -59,7 +59,7 @@ OoceanBase 数据库的当前版本中，由于租户工作线程和大部分后
    </p>
    </main>
 
-4. 挂载 CPU 子系统。
+4. 挂载 cpu 子系统。
 
    创建一个名为 `cpu` 的层级，在该层级上附加 `cpu` 子系统，并且将层级挂载到 `/sys/fs/cgroup/cpu` 目录。
 
@@ -100,7 +100,7 @@ cgroup 系统目录配置成功后，即可部署 OceanBase 数据库。 OceanBa
 
 OceanBase 数据库安装成功后，需要建立 OceanBase 数据库软件的安装目录与 cgroup 系统目录的软链接。
 
-1. 使用 `admin` 用户登录到 OBServer 服务器。
+1. 使用 `admin` 用户登录到 OBServer 节点。
 
 2. 手动建立 OceanBase 数据库软件的安装目录与 cgroup 系统目录的软链接。
 
