--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/1.deploy-by-obd.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/1.deploy-by-obd.md
@@ -167,7 +167,7 @@
 
 ### Java 环境验证
 
-由于 OBD 是通过远程执行脚本部署 OCP Express，所以需要通过 SSH 方式验证 Java 环境，直接在机器上执行 `java -verison` 可能无效。
+由于 OBD 是通过远程执行脚本部署 OCP Express，所以需要通过 SSH 方式验证 Java 环境，直接在机器上执行 `java -version` 可能无效。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
@@ -218,7 +218,7 @@ OpenJDK 64-Bit Server VM (build 25.362-b08, mixed mode)
 [admin@test001 ~]$ obd cluster stop myoceanbase
 
 # 销毁已部署的集群，以部署名为 myoceanbase 为例
-[admin@test001 ~]$ obd cluster destory myoceanbase
+[admin@test001 ~]$ obd cluster destroy myoceanbase
 ```
 
 ### 部署特定版本组件
