--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/1.view-resource-pools.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/1.view-resource-pools.md
@@ -67,7 +67,7 @@
 
     * `RESOURCE_POOL_ID`：资源池 ID，每个资源池对应一个资源池 ID。
 
-    * `TENANT_ID`：该资源池归属的租户 ID，每个租户对应一个租户 ID，`sys` 租户的租户 ID 为 `1`，当前租户详细信息的查看方法，请参见 [查看租户信息](../../4.manage-tenants/4.view-tenant-information.md)。
+    * `TENANT_ID`：该资源池归属的租户 ID，每个租户对应一个租户 ID，`sys` 租户的租户 ID 为 `1`，当前租户详细信息的查看方法，请参见 [查看租户信息](../../4.manage-tenants/4.view-a-tenant-information.md)。
   
        如果查询结果中 `TENANT_ID` 为 `NULL`，则表示当前资源池未绑定租户，您可以将该资源池分配给租户，将资源池分配给租户的详细操作请参见 [将资源池分配给租户](2.assign-a-resource-pool-to-a-tenant.md)。
 
