--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/1.scale-out/1.add-a-zone-to-the-cluster.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/1.scale-out/1.add-a-zone-to-the-cluster.md
@@ -45,7 +45,7 @@
 
 5. 通过修改租户的 Locality 来增加副本。
 
-   根据 Locality 的变更规则，每次只能增加一个 Zone 内的 Locality，Locality 的变更规则相关信息请参见 [Locality 概述](../../../../4.replica-management/5.locality-management/1.locality-overview.md)。
+   根据 Locality 的变更规则，每次只能增加一个 Zone 内的 Locality，Locality 的变更规则相关信息请参见 [Locality 概述](../../../../4.replica-management/5.locality-management/1.tenant-locality-overview.md)。
 
    ```sql
    obclient>ALTER TENANT tenant1 LOCALITY='F@z1,F@z2,F@z3,F@z4';
