--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/2.assign-a-resource-pool-to-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/2.assign-a-resource-pool-to-a-tenant.md
@@ -67,7 +67,7 @@ ALTER TENANT tenant_name RESOURCE_POOL_LIST [=](pool_name [, pool_name...]) ;
 
 4. 通过修改租户 Locality 来增加副本。
 
-   根据 Locality 的变更规则，每次只能增加一个 Zone 内的 Locality，Locality 的变更规则相关信息请参见 [Locality 概述](../../../4.replica-management/5.locality-management/1.locality-overview.md)。
+   根据 Locality 的变更规则，每次只能增加一个 Zone 内的 Locality，Locality 的变更规则相关信息请参见 [Locality 概述](../../../4.replica-management/5.locality-management/1.tenant-locality-overview.md)。
 
    ```sql
    obclient>ALTER TENANT tenant1 LOCALITY='F@z1,F@z2,F@z3,F@z4';
