--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/6.remove-a-resource-pool-from-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/6.remove-a-resource-pool-from-a-tenant.md
@@ -28,7 +28,7 @@ ALTER TENANT tenant_name RESOURCE_POOL_LIST [=](pool_name [, pool_name...]) ;
 
 2. 通过修改租户 `tenant1` 的 Locality 来删除副本。
 
-   根据 Locality 的变更规则，每次只能删除一个 Zone 内的 Locality，Locality 的变更规则相关信息请参见 [Locality 概述](../../../4.replica-management/5.locality-management/1.locality-overview.md)。
+   根据 Locality 的变更规则，每次只能删除一个 Zone 内的 Locality，Locality 的变更规则相关信息请参见 [Locality 概述](../../../4.replica-management/5.locality-management/1.tenant-locality-overview.md)。
 
    ```sql
    obclient>ALTER TENANT tenant1 LOCALITY='F@z1,F@z2,F@z3,F@z4';
