400ofuse快速上手低错修改

--- a/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
+++ b/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
@@ -16,6 +16,7 @@
   | 视图名     | 64 字节    |
   | 别名      | 255 字节   |
   | 表组名     | 128 字节   |
+  | 分区名      | 64 字符    |
 
 * Oracle 模式
 
@@ -31,6 +32,7 @@
   | 别名     | 255 字节   |
   | 对象名    | 128 字节   |
   | 表组名    | 128 字节   |
+  | 分区名      | 64 字符    |
 
 ## ODP 最大连接数限制
 
