--- a/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/1.object-naming-conventions/1.overview-of-object-naming-conventions.md
+++ b/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/1.object-naming-conventions/1.overview-of-object-naming-conventions.md
@@ -45,6 +45,7 @@
   | 索引名     | 64 字节。    |
   | 视图名     | 64 字节。    |
   | 别名      | 255 字节。   |
+  | 分区名      | 64 字符    |
 
   <!--| 表组名     | 128 字节。   |-->
 
@@ -61,6 +62,7 @@
   | 视图名    | 128 字节。   |
   | 别名     | 255 字节。   |
   | 对象名    | 128 字节。   |
+  | 分区名      | 64 字符    |
 
   <!--| 表组名    | 128 字节。   |-->
 
